--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 body {
   font-family: Arial, sans-serif;
-  background: #f2f2f2;
-  text-align: center;
-}
+  margin: 0;
+  min-height: 100vh;
 
-body {
-  background-image: url("img/background.jpg");
+  background-image: url("img/e4286008-466e-4d16-b89c-7870260089c0.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
